[metadata]
name = elb_docs
summary = Open Telekom Cloud Load Balancing Service
description_file =
    README.rst
author = Open Telekom Cloud
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
keywords =
    OpenStack, openstackclient, openstacksdk, Open Telekom Cloud, otc, T-Systems, Telekom
